added images to sections. small styling fixes

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <!-- header -->
         <section class="no-padding">
-          <img src="https://udg-static-media.s3-us-west-1.amazonaws.com/laptop.jpg" class="header-img" alt="">
+          <img src="https://udg-static-media.s3-us-west-1.amazonaws.com/laptopudg.jpg" class="header-img" alt="">
         </section>
 
         <section  class="container" id="what-is-section">
@@ -150,13 +150,24 @@
           <h1 class="text-center">Who We Work With</h1>
         </section>
 
-        <section class="inverted-bg">
+        <section class="inverted-bg" id="who-we-are">
           <h1 class="text-center white-text">Who We Are</h1>
-          <br><br><br><br><br><br><br><br><br><br><br>
+          <br>
+          <div>
+            <img src="https://udg-static-media.s3-us-west-1.amazonaws.com/udgvenn.png">
+          </div>
+          
+          <br>
         </section>
 
-        <section class="text-center">
+        <section class="text-center" id="where-we-are">
           <h1 class="text-center">Where We Are</h1>
+          <br>
+          <div>
+            <img src="https://udg-static-media.s3-us-west-1.amazonaws.com/map.png">
+          </div>
+          
+          <br>
         </section>
 
         <section class="inverted-bg text-center" id="join-team">
