--- a/index.html
+++ b/index.html
@@ -13,17 +13,29 @@
         <!-- <section class="container"> -->
           <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
               <div class="container">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#"><img src="https://udg-static-media.s3-us-west-1.amazonaws.com/udg_logo.png" alt="UDG Logo"></a>
                 <button class="navbar-toggler btn-inherit" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      <a class="nav-link" aria-current="page"  href="#what-is-section">What is UDG</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Link</a>
+                      <a class="nav-link" href="#qualify">Qualify</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#portfolio">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#who-we-are">Who We Are</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#where-we-are">Where We Are</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#join-team">Join Us</a>
                     </li>
                     <!-- <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -40,14 +52,14 @@
                       <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                     </li> -->
                   </ul>
-                  <!-- <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                  <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url('/login') }}">Login</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url('/register') }}">Register</a>
                     </li>
-                  </ul> -->
+                  </ul>
                   <!-- <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
@@ -58,8 +70,8 @@
           <!-- </section> -->
 
         <!-- header -->
-        <section class="no-padding">
-          <img src="https://udg-static-media.s3-us-west-1.amazonaws.com/laptopudg.jpg" class="header-img" alt="">
+        <section class="no-padding" id="hero">
+          <img src="https://udg-static-media.s3-us-west-1.amazonaws.com/laptopudg.jpg" class="header-img" alt="Laptop">
         </section>
 
         <section  class="container" id="what-is-section">
@@ -146,7 +158,7 @@
           </div>
         </section>
 
-        <section>
+        <section id="portfolio">
           <h1 class="text-center">Who We Work With</h1>
         </section>
 
@@ -154,7 +166,7 @@
           <h1 class="text-center white-text">Who We Are</h1>
           <br>
           <div>
-            <img src="https://udg-static-media.s3-us-west-1.amazonaws.com/udgvenn.png">
+            <img src="https://udg-static-media.s3-us-west-1.amazonaws.com/udgvenn.png" alt="Venn Diagram">
           </div>
           
           <br>
@@ -164,7 +176,7 @@
           <h1 class="text-center">Where We Are</h1>
           <br>
           <div>
-            <img src="https://udg-static-media.s3-us-west-1.amazonaws.com/map.png">
+            <img src="https://udg-static-media.s3-us-west-1.amazonaws.com/map.png" alt="Map">
           </div>
           
           <br>
