--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <link href="./style.css" rel="stylesheet">
         <title>UDG</title>
     </head>
-    <body>
+    <body data-bs-spy="scroll" data-bs-target="body" data-bs-offset="100">
         <!-- Navbar -->
         <!-- <section class="container"> -->
-          <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+          <nav class="navbar nav sticky-top navbar-expand-lg navbar-dark bg-dark" id="navbar">
               <div class="container">
                 <a class="navbar-brand" href="#"><img src="https://udg-static-media.s3-us-west-1.amazonaws.com/udg_logo.png" alt="UDG Logo"></a>
                 <button class="navbar-toggler btn-inherit" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,7 +20,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page"  href="#what-is-section">What is UDG</a>
+                      <a class="nav-link"  href="#what-is-section">What is UDG</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#qualify">Qualify</a>
@@ -54,10 +54,10 @@
                   </ul>
                   <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url('/login') }}">Login</a>
+                        <a class="nav-link" href="">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url('/register') }}">Register</a>
+                        <a class="nav-link" href="">Register</a>
                     </li>
                   </ul>
                   <!-- <form class="d-flex">
@@ -215,6 +215,34 @@
           </div>
         </section>
 
+        <script src="./script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+        <script>
+          const navLinks = document.querySelectorAll('.nav-item')
+          const menuToggle = document.getElementById('navbarSupportedContent')
+          const bsCollapse = new bootstrap.Collapse(menuToggle)
+          const pageWidth  = document.documentElement.scrollWidth;
+          let mobileNav = false;
+          if(pageWidth < 1000) {
+            mobileNav = true; 
+          }
+          // if(window.screen.width < 1000) {
+          navLinks.forEach((l) => {
+              l.addEventListener('click', () => { 
+                console.log(pageWidth)
+                if(mobileNav) {
+                  bsCollapse.toggle() 
+                }
+              })
+          })
+          window.addEventListener("resize", function() {
+            if (window.matchMedia("(max-width: 1000px)").matches) {
+              mobileNav = true;
+            } else {
+              mobileNav = false;
+            }
+          })
+          
+        </script>
     </body>
 </html>
