--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           </div>
         </section>
 
-        <script src="./script.js"></script>
+        <script type="text/javascript" src="./script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
         <script>
           const navLinks = document.querySelectorAll('.nav-item')
@@ -229,7 +229,6 @@
           // if(window.screen.width < 1000) {
           navLinks.forEach((l) => {
               l.addEventListener('click', () => { 
-                console.log(pageWidth)
                 if(mobileNav) {
                   bsCollapse.toggle() 
                 }
@@ -245,8 +244,7 @@
 
           function scrollToTarget(id){
               var element = document.getElementById(id);
-              var navHeight = document.getElementById('navbar').offsetHeight 
-              console.log(navHeight);
+              var navHeight = document.getElementById('navbar').offsetHeight;
               var headerOffset = navHeight;
               var elementPosition = element.offsetTop;
               var offsetPosition = elementPosition - headerOffset;
