portfolio section template

--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@
 
         <section id="portfolio">
           <h1 class="text-center">Who We Work With</h1>
+          <div class="portfolio-box">
+
+          </div>
         </section>
 
         <section class="inverted-bg" id="who-we-are">
